Changed body element's style to use 'position: absolute' from 'position: fixed' for unreloaded layout issue on orientation change and android cordova app.

--- a/css-components/components-src/stylus/components/global.styl
+++ b/css-components/components-src/stylus/components/global.styl
@@ -32,15 +32,17 @@ var-border--invalid = 1px solid var-input-invalid-border-colr
 var-input-border = 1px solid var-input-border-color
 
 html
-  width 100%
   height 100%
+  width 100%
 
 body
-  width 100%
-  height 100%
-  position fixed
-  margin 0
+  position absolute
+  top 0
+  right 0
+  left 0
+  bottom 0
   padding 0
+  margin 0
 
 *:not(input, textarea, select)
   user-select none
