--- a/css-components/www/onsen-css-components-default.css
+++ b/css-components/www/onsen-css-components-default.css
@@ -1,13 +1,15 @@
 html {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 body {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  margin: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   padding: 0;
+  margin: 0;
 }
 *:not(input,
 textarea,
